; ModuleID = '/home/carl/AnghaBench/lz4/lib/extr_xxhash.c_XXH32_avalanche.c'
source_filename = "/home/carl/AnghaBench/lz4/lib/extr_xxhash.c_XXH32_avalanche.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PRIME32_2 = common dso_local global i32 0, align 4
@PRIME32_3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @XXH32_avalanche to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @XXH32_avalanche(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = ashr i32 %3, 15
  %5 = load i32, i32* %2, align 4
  %6 = xor i32 %5, %4
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* @PRIME32_2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = mul nsw i32 %8, %7
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = ashr i32 %10, 13
  %12 = load i32, i32* %2, align 4
  %13 = xor i32 %12, %11
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* @PRIME32_3, align 4
  %15 = load i32, i32* %2, align 4
  %16 = mul nsw i32 %15, %14
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* %2, align 4
  %18 = ashr i32 %17, 16
  %19 = load i32, i32* %2, align 4
  %20 = xor i32 %19, %18
  store i32 %20, i32* %2, align 4
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
